test/files/neg/error_tooManyArgsPattern.check
error_tooManyArgsPattern.scala:3: error: too many arguments for unapply pattern, maximum = 22
    case List(x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12, x13, x14, x15, x16, x17, x18, x19, x20, x21, x22, x23) => 7
         ^
one error found
